creusot/tests/should_fail/traits/17_impl_refinement.coma

module C17ImplRefinement_Impl0_MyFunction
  let%span s17_impl_refinement0 = "../17_impl_refinement.rs" 15 8 15 10
  
  let%span s17_impl_refinement1 = "../17_impl_refinement.rs" 12 15 12 19
  
  let%span s17_impl_refinement2 = "../17_impl_refinement.rs" 13 14 13 27
  
  use prelude.prelude.Borrow
  
  use prelude.prelude.UIntSize
  
  use prelude.prelude.Intrinsic
  
  use prelude.prelude.UIntSize
  
  use prelude.prelude.Int
  
  let rec my_function (self:()) (return'  (ret:usize))= {[%#s17_impl_refinement1] true}
    (! bb0 [ bb0 = s0 [ s0 =  [ &_0 <- [%#s17_impl_refinement0] (20 : usize) ] s1 | s1 = return' {_0} ]  ] )
    [ & _0 : usize = any_l () ]
    
    [ return' (result:usize)-> {[@expl:postcondition] [%#s17_impl_refinement2] UIntSize.to_int result >= 15}
      (! return' {result}) ]
    
end
module C17ImplRefinement_Impl1_NeedFalse_Impl
  let%span s17_impl_refinement0 = "../17_impl_refinement.rs" 28 15 28 23
  
  use prelude.prelude.UInt64
  
  use prelude.prelude.Int
  
  use prelude.prelude.UInt64
  
  constant y  : uint64
  
  function need_false [#"../17_impl_refinement.rs" 29 4 29 25] (y : uint64) : ()
  
  goal vc_need_false : true
end
module C17ImplRefinement_Impl0
  let%span s17_impl_refinement0 = "../17_impl_refinement.rs" 14 4 14 34
  
  let%span span1 = "../../../../../creusot-contracts/src/invariant.rs" 8 8 8 12
  
  let%span span2 = "../../../../../creusot-contracts/src/invariant.rs" 27 8 27 18
  
  predicate invariant'1 (self : ()) =
    [%#span1] true
  
  predicate inv'1 (_1 : ())
  
  axiom inv'1 [@rewrite] : forall x : () . inv'1 x = true
  
  use prelude.prelude.Borrow
  
  predicate invariant'0 (self : ()) =
    [%#span2] inv'1 self
  
  predicate inv'0 (_1 : ())
  
  axiom inv'0 [@rewrite] : forall x : () . inv'0 x = true
  
  use prelude.prelude.UIntSize
  
  use prelude.prelude.UIntSize
  
  use prelude.prelude.Int
  
  goal my_function_refn : [%#s17_impl_refinement0] forall self : () . inv'0 self
   -> (forall result : usize . UIntSize.to_int result >= 15  -> UIntSize.to_int result >= 10)
end
module C17ImplRefinement_Impl1
  let%span s17_impl_refinement0 = "../17_impl_refinement.rs" 29 4 29 25
  
  use prelude.prelude.UInt64
  
  use prelude.prelude.UInt64
  
  use prelude.prelude.Int
  
  goal need_false_refn : [%#s17_impl_refinement0] forall x : uint64 . UInt64.to_int x >= 10  -> UInt64.to_int x >= 15
end
